Fix overflow at smallest viewports

--- a/src/css/partials/layout.css
+++ b/src/css/partials/layout.css
@@ -109,7 +109,7 @@
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(19rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(min(19rem, 100%), 1fr));
   gap: 1rem;
   align-content: start;
 }
